docs(dev-notes): gradle loopback 시 javac 컴파일 검증 폴백 기록